<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblPlantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPlantName" />

    <AutoCompleteTextView
        android:id="@+id/actPlantName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/blank" >

        <requestFocus />
    </AutoCompleteTextView>

    <Button
        android:id="@+id/btnSearchPlant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="searchForPlants"
        android:text="@string/lblSearch" />

</LinearLayout>
