<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GPSAPlantActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblGPSAPlant" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtDescription"
        android:layout_below="@+id/edtDescription"
        android:layout_marginTop="21dp"
        android:onClick="searchClicked"
        android:text="@string/lblSelectAPlant" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/lblDescription" />

    <EditText
        android:id="@+id/edtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:ems="10" />

    <TextView
        android:id="@+id/txtLatitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/search"
        android:layout_below="@+id/search"
        android:layout_marginTop="14dp"
        android:text="@string/lblLatitudeLabel" />

    <TextView
        android:id="@+id/lblLatitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtLatitudeLabel"
        android:layout_alignBottom="@+id/txtLatitudeLabel"
        android:layout_alignRight="@+id/textView2"
        android:text="@string/blank" />

    <TextView
        android:id="@+id/lblLongitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtLatitudeLabel"
        android:layout_below="@+id/lblLatitudeValue"
        android:text="@string/lblLongitudeLabel" />

    <TextView
        android:id="@+id/lblLongitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblLongitudeLabel"
        android:layout_alignBottom="@+id/lblLongitudeLabel"
        android:layout_alignRight="@+id/lblLatitudeValue"
        android:text="@string/blank" />

</RelativeLayout>